--- a/vignettes/library.bib
+++ b/vignettes/library.bib
@@ -30,3 +30,12 @@
     pages = {4436},
     doi = {10.1101/gr.124321.111},
   }
+
+  @Book{wickham2009,
+    author = {Hadley Wickham},
+    title = {ggplot2: Elegant Graphics for Data Analysis},
+    publisher = {Springer-Verlag New York},
+    year = {2009},
+    isbn = {978-0-387-98140-6},
+    url = {http://had.co.nz/ggplot2/book},
+  }
