--- a/vignettes/library.bib
+++ b/vignettes/library.bib
@@ -39,3 +39,13 @@
     isbn = {978-0-387-98140-6},
     url = {http://had.co.nz/ggplot2/book},
   }
+
+  @Article{lawrence2013,
+    title = {Software for Computing and Annotating Genomic Ranges},
+    author = {Michael Lawrence and Wolfgang Huber and Herv\'e Pag\`es and Patrick Aboyoun and Marc Carlson and Robert Gentleman and Martin Morgan and Vincent Carey},
+    year = {2013},
+    journal = {{PLoS} Computational Biology},
+    volume = {9},
+    issue = {8},
+    doi = {10.1371/journal.pcbi.1003118},
+  }
