--- a/vignettes/library.bib
+++ b/vignettes/library.bib
@@ -49,3 +49,15 @@
     issue = {8},
     doi = {10.1371/journal.pcbi.1003118},
   }
+
+  @Article{lawrence2009,
+    title = {rtracklayer: an R package for interfacing with
+                  genome browsers},
+    author = {Michael Lawrence and Robert Gentleman and Vincent Carey},
+    year = {2009},
+    journal = {Bioinformatics},
+    volume = {25},
+    pages = {1841-1842},
+    doi = {10.1093/bioinformatics/btp328},
+  }
+
