--- a/vignettes/NVT.Rnw
+++ b/vignettes/NVT.Rnw
@@ -40,7 +40,7 @@ BiocStyle::latex()
 
 \begin{abstract}
 
-Differential expression analysis between two samples, is a common task in the analysis of RNA-Seq data. In order to identify differential expressed genes, it is crucial that the two compared data sets are normalized. For the task of normalizing gene expression data there are multiple methods available. However all of these methods are based on certain assumptions, these can or can not be suitable for the data which should be normalized. One important question is, how the normalization affects the data and which normalization method and its assumptions apply to the expression data. The \nvt{} package provides a fast and simple way to analyze multiple normalization methods via visualization and correlation values. This vignette explains the use of the package and demonstrates a typical work flow.
+Differential expression analysis between two samples, is a common task in the analysis of RNA-Seq data. In order to identify differential expressed genes, it is crucial that the two compared data sets are normalized. For the task of normalizing gene expression data there are multiple methods available. However all of these methods are based on certain assumptions, these can or can not be suitable for the data which should be normalized. For planning an adequate normalization strategy one need to answer, how the normalization affects the data sets and which normalization method and its underlying assumptions apply to the analyzed expression data. The \nvt{} package provides a fast and simple way to analyze multiple normalization methods via visualization and correlation values. This vignette explains the use of the package and demonstrates a typical work flow.
 
   \vspace{1em}
 
@@ -145,7 +145,7 @@ The normalization methods are:
  \item TMM = Trimmed Mean of M-values normalization,
  \item UQ = Upper Quartile normalization
  \item UQ2 = Upper Quartile normalization (from \href{https://www.bioconductor.org/packages/release/bioc/html/NOISeq.html}{NOISeq}\cite{tarazona2011})
- \item Q = Quantile normalization
+ \item Q = Quantile normalization implemented in \href{https://bioconductor.org/packages/release/bioc/html/limma.html}{limma}\cite{ritchie2015}
  \item RPKM = Reads Per Kilobase per Million mapped reads normalization
  \item RPM = Reads Per Million mapped reads normalization
  \item TPM = Transcripts Per Million normalization
