--- a/vignettes/library.bib
+++ b/vignettes/library.bib
@@ -61,3 +61,13 @@
     doi = {10.1093/bioinformatics/btp328},
   }
 
+    @Article{ritchie2015,
+    author = {Matthew E Ritchie and Belinda Phipson and Di Wu and Yifang Hu and Charity W Law and Wei Shi and Gordon K Smyth},
+    title = {{limma} powers differential expression analyses for {RNA}-sequencing and microarray studies},
+    journal = {Nucleic Acids Research},
+    year = {2015},
+    volume = {43},
+    number = {7},
+    pages = {e47},
+    doi = {10.1093/nar/gkv007},
+  }
